[package]
name = "reinforced-concrete"
version = "0.1.0"
authors = ["Errol Drummond <errol@dusk.network>", "Luke Pearson <luke@dusk.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dusk-bls12_381 = {version = "0.6", default-features = false}
bigint = "4.4.3"
dusk-bytes = "0.1.3"
