[package]
name = "reinforced-concrete"
version = "0.1.0"
authors = ["Errol Drummond <errol@dusk.network>", "Luke Pearson <luke@dusk.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = "4.4.3"
dusk-plonk = {version = "0.8.0", branch = "modularise_plookup"}
rand = "0.7"
rand_core = {version="0.6", default-features=false}