[package]
name = "reinforced-concrete"
version = "0.1.0"
authors = ["Errol Drummond <errol@dusk.network>", "Luke Pearson <luke@dusk.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = "4.4.3"
dusk-plonk = { git = "https://github.com/dusk-network/plonk", branch = "modularise_plookup" }
rand_core = "0.5"
rand = "0.7"
anyhow = "1.0.32"
dusk-bytes = "0.1.4"